objects/adapps__OptimizerPlus_Rep_Related_Lists_Item__c.object
<CustomObject>
    <fields>
        <fullName>adapps__Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>adapps__FlexiPage__c</fullName>
        <label>FlexiPage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__Rep_Related_Lists__c</fullName>
        <label>Replacing Related Lists with the Rela...</label>
        <referenceTo>adapps__OptimizerPlus_Rep_Related_Lists__c</referenceTo>
        <relationshipLabel>Rep Related Lists Items</relationshipLabel>
        <relationshipName>Rep_Related_Lists_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>adapps__Status__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__Url__c</fullName>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <label>Rep Related Lists Item</label>
    <nameField>
        <label>Rep Related Lists Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rep Related Lists Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>